<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.ProductDetailFragment">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvPrice"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/product_image_description" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        tools:text="Nombre Producto"
                        android:textSize="28sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipDelivery"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delivery_true"
                            app:chipIcon="@drawable/ic_shipping"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipRetiro"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delivery_false"
                            app:chipIcon="@drawable/ic_warehouse"
                            android:visibility="gone"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipImported"
                            android:layout_marginHorizontal="8dp"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Alemania"
                            app:chipIcon="@drawable/ic_imported"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipLocal"
                            android:layout_marginHorizontal="8dp"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Chile"
                            app:chipIcon="@drawable/ic_factory"
                            android:visibility="gone"/>

                    </LinearLayout>


                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_description_subtitle"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginVertical="8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginHorizontal="16dp"
                            app:drawableStartCompat="@drawable/ic_size"
                            android:drawablePadding="4dp"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipSize"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="42"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/origin"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginHorizontal="16dp"
                            app:drawableStartCompat="@drawable/ic_factory"
                            android:drawablePadding="4dp"/>

                        <TextView
                            android:id="@+id/tvOrigin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Importado de Alemania"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginHorizontal="16dp"
                            android:text="@string/color_text"
                            android:layout_gravity="center"
                            app:drawableStartCompat="@drawable/ic_color"
                            android:drawablePadding="8dp"/>

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:checkedButton="@+id/radio_button_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/radio_button_1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:buttonTint="@color/black"/>
                            <RadioButton
                                android:id="@+id/radio_button_2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:buttonTint="@color/red"/>
                            <RadioButton
                                android:id="@+id/radio_button_3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:buttonTint="@color/green"/>
                            <RadioButton
                                android:id="@+id/radio_button_4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:buttonTint="@color/blue"/>
                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-8dp"
        android:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Precio"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btContact"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/contact_button_text"
                app:icon="@drawable/ic_email"
                android:layout_gravity="center"
                android:textColor="@color/text_icons"
                app:iconTint="@color/text_icons"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>